<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.dumai.loan.activity.RegisterActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_size_56"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pixel_size_28"
            android:layout_marginRight="@dimen/pixel_size_28"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/ple_phone_number"
            android:inputType="number"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="@dimen/pixel_size_3"
            android:paddingTop="@dimen/pixel_size_20"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/pixel_size_28"
        android:layout_marginRight="@dimen/pixel_size_28"
        android:background="@color/darkslategrey" />

    <LinearLayout
        android:id="@+id/ll_my_credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_size_56"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tv_my_credit_card_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pixel_size_28"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/verifica_code"
            android:inputType="number"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="@dimen/pixel_size_3"
            android:paddingTop="@dimen/pixel_size_20"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/btn_send_ver_code"
            style="@style/Button_List_Style"
            android:layout_width="0dp"
            android:layout_height="@dimen/pixel_size_26"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="@dimen/pixel_size_33"
            android:layout_weight="1"
            android:background="@drawable/button_login_bg"
            android:gravity="center"
            android:text="@string/send_ver_code"
            android:textColor="@color/selector_btn_color"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/pixel_size_28"
        android:layout_marginRight="@dimen/pixel_size_28"
        android:background="@color/darkslategrey" />

    <TextView
        android:id="@+id/registerAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/pixel_size_56"
        android:layout_marginRight="@dimen/pixel_size_34"
        android:layout_marginTop="@dimen/pixel_size_11"
        android:text="@string/cannot_receive_code"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_13" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_size_56"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pixel_size_28"
            android:layout_marginRight="@dimen/pixel_size_28"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/setting_psd"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingTop="@dimen/pixel_size_20"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/pixel_size_28"
        android:layout_marginRight="@dimen/pixel_size_28"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_size_56"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_invita_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pixel_size_28"
            android:layout_marginRight="@dimen/pixel_size_28"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/invita_code"
            android:inputType="number"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingTop="@dimen/pixel_size_20"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/pixel_size_28"
        android:layout_marginRight="@dimen/pixel_size_28"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pixel_size_10"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/black_1"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textColor="@color/black_1"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/Button_List_Style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_size_43"
        android:layout_marginLeft="@dimen/pixel_size_28"
        android:layout_marginRight="@dimen/pixel_size_28"
        android:layout_marginTop="@dimen/pixel_size_26"
        android:background="@drawable/button_login_bg"
        android:gravity="center"
        android:text="@string/btn_register"
        android:textColor="@color/selector_btn_color"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>
