<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitesmoke"
    tools:context="com.dumai.loan.activity.MoreActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ll_online_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pixel_size_10"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pixel_size_15"
                android:layout_marginLeft="@dimen/pixel_size_27"
                android:layout_marginRight="@dimen/pixel_size_11"
                android:layout_marginTop="@dimen/pixel_size_16"
                android:src="@drawable/icon_online_ser" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/online_service"
                android:textColor="@color/black_1"
                android:textSize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/pixel_size_15"
                android:layout_weight="1"
                android:gravity="right|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_next" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/text_size_16"
            android:background="@color/gainsboro" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_help_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pixel_size_15"
                android:layout_marginLeft="@dimen/pixel_size_27"
                android:layout_marginRight="@dimen/pixel_size_13"
                android:layout_marginTop="@dimen/pixel_size_16"
                android:src="@drawable/icon_help_center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/help_center"
                android:textColor="@color/black_1"
                android:textSize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/pixel_size_16"
                android:layout_weight="1"
                android:gravity="right|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_next" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/text_size_16"
            android:background="@color/gainsboro" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_goto_score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pixel_size_15"
                android:layout_marginLeft="@dimen/pixel_size_27"
                android:layout_marginRight="@dimen/pixel_size_13"
                android:layout_marginTop="@dimen/pixel_size_16"
                android:src="@drawable/icon_goto_score" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/goto_score"
                android:textColor="@color/black_1"
                android:textSize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/pixel_size_16"
                android:layout_weight="1"
                android:gravity="right|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_next" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/text_size_16"
            android:background="@color/gainsboro" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pixel_size_15"
                android:layout_marginLeft="@dimen/pixel_size_27"
                android:layout_marginRight="@dimen/pixel_size_13"
                android:layout_marginTop="@dimen/pixel_size_16"
                android:src="@drawable/icon_about_us" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/about_us"
                android:textColor="@color/black_1"
                android:textSize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/pixel_size_16"
                android:layout_weight="1"
                android:gravity="right|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_next" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
